--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,13 +7,17 @@
     <string name="hotcoffee">Hot Coffee</string>
     <string name="coldcoffee">Cold Coffee</string>
     <string name="title_activity_tabbed_brewer">TabbedBrewer</string>
+    <string name="title_activity_tabview">Coffee Brewer</string>
     <string name="title_section1">Overview</string>
-    <string name="title_section2">History</string>
+    <string name="title_section2">Facts</string>
     <string name="title_section3">How It Works</string>
     <string name="title_section4">Steps</string>
     <string name="ninetysec">90 Sec Reminder</string>
     <string name="twentyfour">24Hr Cold Brew</string>
     <string name="twelvehour">12Hr Cold Brew</string>
     <string name="fivemin">5 Min Reminder</string>
+    <string name="history">History</string>
+    <string name="howworks">How it Works</string>
+    <string name="steps">Steps</string>
 
 </resources>
