--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="history">History</string>
     <string name="howworks">How it Works</string>
     <string name="steps">Steps</string>
+    <string name="overview">Overview</string>
 
 </resources>
