Tweaks to layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="howworks">How it Works</string>
     <string name="steps">Steps</string>
     <string name="overview">Overview</string>
+    <string name="select">Select a Coffee Brewing Technique to Learn About</string>
 
 </resources>
